# fantasy-rankings-2026

./: .gitignore  TODO.md  docker-compose.yml  nginx.conf
backend/: Dockerfile  pyproject.toml
backend/data/: player.db  player_db
backend/data/files/: fantasy-rankings-06-26.csv  fantasy-rankings-07-25-25.csv
backend/scripts/: run.sh
backend/src/: __init__.py  db.py  main.py  model.py  schema.py
backend/src/backend/: fill_db.py
backend/src/positions/: players.py
backend/src/utils/: fill_db.py  fill_historical.py  fill_personal_rankings.py  init_db.py  nfl_data.py  nfl_data_wb.ipynb  read_nfl_data.ipynb  read_nfl_data.py  write_nfl_data.py
backend/tests/: basic_test.py  conftest.py  test_historical_players.py  test_personal_rankings.py
databricks/: total_career_ppg.ipynb
frontend/: Dockerfile  instrumentation.ts  next.config.ts  package-lock.json  package.json  proxy.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/: players.ts
frontend/app/components/: HistoricalPlayerCard.tsx  NavBar.tsx  PlayerCard.tsx  RankingCard.tsx
frontend/app/historical/: CardGrid.tsx  HistoricalPlayerCard.tsx  HistoricalPlayers.tsx  page.tsx
frontend/app/interfaces/: historical.ts  player.tsx  rankings.ts
frontend/app/lib/: log.ts
frontend/app/players/[rank]/: PlayerInformation.tsx  page.tsx
frontend/app/rankings/: page.tsx
frontend/app/search/: PlayerInfo.tsx  PlayerToken.tsx  SearchBar.tsx  page.tsx
